--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "members-only",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "16.10.0"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -13,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.2.4",
